force-app/main/default/objects/CLBLReportParm__mdt/fields/SCR__c.field-meta.xml
<CustomField>
    <fullName>SCR__c</fullName>
    <label>SCR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>