force-app/main/default/objects/CLBLReportParm__mdt/fields/Service_Centres__c.field-meta.xml
<CustomField>
    <fullName>Service_Centres__c</fullName>
    <label>Service Centres</label>
    <length>100</length>
    <type>Text</type>
</CustomField>